@@ -6,6 +6,9 @@
 	* Framework/PCEditorManager.m
 	Use the internal editor if it is available, even if no parser is available.
 
+	* Modules/Editors/ProjectCenter/PCEditor.m
+	Handle missing image better.
+
 2015-04-07 Riccardo Mottola <rm@gnu.org>
 
 	* Modules/Editors/ProjectCenter/PCEditorView.m
